<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/TopLinear"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical"
        >
        <ScrollView 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/selectButtonScrollview"
	        android:scrollbars="none"
	        >
            <LinearLayout 
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:orientation="vertical"
		        android:layout_marginTop="5dp"
		        >
		        <LinearLayout 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:orientation="vertical"
		            >
		            <RelativeLayout
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:orientation="horizontal"
		            	android:background="@drawable/border_search"
		            	
		                >
		                <EditText 
		                	android:layout_width="wrap_content"
		                	android:layout_height="wrap_content"
		                	android:id="@+id/SearchEditText"
		                	android:inputType="text"
		                	android:background="@color/white"
		                	android:layout_margin="2dp"
		                	android:layout_gravity="center_vertical"
		                	
		                	/>
		                <ImageButton 
		                    android:layout_width="wrap_content"
		                    android:layout_height="wrap_content"
		                    android:id="@+id/SearchButton"
		                    android:background="@drawable/search"
		                    android:layout_alignParentRight="true"
		                    />
		            </RelativeLayout>
		            
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:layout_marginTop="5dp"
		                android:text="@string/SelectButtonTitle"
		                android:textColor="@color/myRed"
		                android:textSize="25sp"
		                />
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Technology"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/TechnologyLinear1"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		             <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/TechnologyLinear2"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		             <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/TechnologyLinear3"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/TechnologyLinear4"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Product"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/ProductLinear"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/ProductLinear2"
		            	android:orientation="horizontal"
		                >
		            </LinearLayout>
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Style"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/StyleLinear1"
		            	android:orientation="horizontal"
		                ></LinearLayout>
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/StyleLinear2"
		            	android:orientation="horizontal"
		                ></LinearLayout>
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Motion_Business"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/Motion_BusinessLinear"
		            	android:orientation="horizontal"
		                ></LinearLayout>
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Market"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		            <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/MarketLinear"
		            	android:orientation="horizontal"
		                ></LinearLayout>
		            <TextView 
		                android:layout_width="match_parent"
		                android:layout_height="wrap_content"
		                android:text="@string/Function"
		                android:textSize="25sp"
		                android:textColor="@color/MainBlue"
		                />
		             <LinearLayout 
		                android:layout_width="match_parent"
		            	android:layout_height="wrap_content"
		            	android:id="@+id/FunctionLinear"
		            	android:orientation="horizontal"
		                ></LinearLayout>
		        </LinearLayout>
		    </LinearLayout>
        </ScrollView>  
    </LinearLayout>   
    

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/BottomLinear"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/MainBlue"
        >
        <ImageButton 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/GetBack"
            android:background="@drawable/arrow"
            />
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="返回"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:gravity="center_vertical"
            android:fontFamily="黑体"
            android:background="@color/MainBlue"
            android:id="@+id/btnGetBack"
            />
    </LinearLayout>
</RelativeLayout>
