<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    <ScrollView 
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/AboutMeSctollView"
		android:background="@color/myGrary"
        >
		<LinearLayout 
	        android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:background="@color/myGrary"
	        >
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:id="@+id/AbleToHide"
	            >
	            <ImageView 
			        android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/NeituiMeLogo"
			        android:src="@drawable/main_logo"
			        android:contentDescription="@string/app_name"
			        />
	            <LinearLayout 
	                android:layout_width="wrap_content"
			        android:layout_height="wrap_content"
			        android:id="@+id/LinearContact"
			        android:orientation="vertical"
			        android:layout_gravity="center"
	                >
	                <LinearLayout 
	                    android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:orientation="horizontal"
			        	android:layout_marginTop="5dp"
	                    >
	                    <ImageView 
	                        android:layout_width="20dp"
	                        android:layout_height="20dp"
	                        android:src="@drawable/mail163"
	                        android:id="@+id/mail163"
	                        
	                        ></ImageView>
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:id="@+id/mail163Text"
	                        android:text="@string/mailName"
	                        android:layout_gravity="center_vertical"
	                        android:layout_marginLeft="5dp"
	                        />
	                </LinearLayout>
	                <LinearLayout 
	                    android:layout_width="wrap_content"
			        	android:layout_height="wrap_content"
			        	android:orientation="horizontal"
			        	android:layout_marginTop="5dp"
	                    >
	                    <ImageView 
	                        android:layout_width="20dp"
	                        android:layout_height="20dp"
	                        android:src="@drawable/qqq"
	                        android:id="@+id/qqq"
	                        ></ImageView>
	                    <TextView 
	                        android:layout_width="wrap_content"
	                        android:layout_height="wrap_content"
	                        android:id="@+id/qqNumberText"
	                        android:text="@string/myQQNumber"
	                        android:layout_gravity="center_vertical"
	                        android:layout_marginLeft="5dp"
	                        />
	                </LinearLayout>
	            </LinearLayout>
	        </LinearLayout>
		    
	        
	        <LinearLayout 
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:id="@+id/LinearSend"
	            >
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:layout_gravity="center"
	                >
	                <TextView 
	                    android:layout_width="wrap_content"
	                	android:layout_height="wrap_content"
	                	android:text="主题："
	                	android:id="@+id/MailTitle"
	                    />
	                <EditText 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:id="@+id/EditTitle"
	                    android:inputType="text"
	                    />
	            </LinearLayout>
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:layout_gravity="center"
	                >
	                <TextView 
	                    android:layout_width="wrap_content"
	                	android:layout_height="wrap_content"
	                	android:text="正文："
	                	android:id="@+id/MailContent"
	                    />
	                <EditText 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:id="@+id/EditContent"
	                    android:inputType="textMultiLine"
	                    />
	            </LinearLayout>
	            <LinearLayout 
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:orientation="horizontal"
	                android:layout_gravity="center"
	                >
	                <Button 
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text="意见发送"
		                android:layout_gravity="center"
		                android:id="@+id/btnSendMail"
		                />
	            </LinearLayout>
	            
	        </LinearLayout>
		</LinearLayout>
    </ScrollView>

    
    <LinearLayout 
         android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:layout_alignParentBottom="true"
	     android:orientation="horizontal"
        >
		<RelativeLayout 
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:id="@+id/AboutMeBottomLinear"
	        android:orientation="horizontal"
	        android:background="@color/MainBlue"
	        >
	        <LinearLayout 
	            android:layout_width="wrap_content"
	    		android:layout_height="wrap_content"
	     		android:layout_alignParentLeft="true"
	     		android:orientation="horizontal"
	            >
	              <ImageButton 
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:id="@+id/AboutMeGetBack"
			            android:background="@drawable/arrow"
			            android:layout_alignParentBottom="true"
			            />
			        <Button 
			            android:layout_width="wrap_content"
			            android:layout_height="match_parent"
			            android:text="返回"
			            android:textColor="@color/white"
			            android:textSize="30sp"
			            android:gravity="center_vertical"
			            android:fontFamily="黑体"
			            android:background="@color/MainBlue"
			            android:id="@+id/UserCenterbtnGetBack"
			            />
	        </LinearLayout>
	    </RelativeLayout>
    </LinearLayout>
</LinearLayout>
